--- a/BanglaGig/banglagig/package.json
+++ b/BanglaGig/banglagig/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "^5.3.3",
     "bootstrap-dark-5": "^1.1.3",
     "dotenv": "^16.4.5",
+    "jsonwebtoken": "^9.0.2",
     "nodemailer": "^6.9.14",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.2",
