--- a/BanglaGig/banglagig/package.json
+++ b/BanglaGig/banglagig/package.json
@@ -11,6 +11,7 @@
     "bootstrap-dark-5": "^1.1.3",
     "dotenv": "^16.4.5",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.14",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
